Fix layout bug

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,8 @@
 body {
 	main.main-wrapper {
 		width: 100%;
+		max-width: 1440px;
+		margin: 0 auto;
 		height: 100vh;
 		display: flex;
 		flex-direction: column;
@@ -173,6 +175,8 @@ body {
 			}
 
 			div.overlay {
+				width: 100%;
+				height: 100%;
 				position: relative;
 				z-index: -1;
 
